TP6-JSON terminado

--- a/S3/Programacion3/TP5-JS/ejercicio08.html
+++ b/S3/Programacion3/TP5-JS/ejercicio08.html
@@ -9,6 +9,8 @@
 <body>
     <div class="container">
         <div class="calculadora">
+            <div class="terminos">
+            </div>
             <p id="visor"></p>
             <button>7</button>
             <button>8</button>
@@ -26,7 +28,6 @@
             <button>0</button>
             <button class="accion">=</button>
             <button class="operador">+</button>
-
         </div>
     </div>
     <script src="js/ejercicio08.js"></script>
